# SuperJumpKickTurbo

./: .gitignore  CMakeLists.txt  Credits  License  README.md  SJKT.cbp  SJKT.depend  SJKT.layout  SJKT.sln  SJKT.vcxproj  SJKT.vcxproj.filters  SparrowGame.cbp  SparrowGame.depend  SparrowGame.layout  SparrowGame.sln  SparrowGame.vcproj
Framework/: configfile.cpp  configfile.h  event.cpp  event.h  framework.cpp  framework.h  graphicslib.h  includes.h  main.cpp  memory.cpp  stage.h  stagestack.cpp  stagestack.h
Framework/Display/: animation.cpp  animation.h  bitmapcache.cpp  bitmapcache.h  display.cpp  display.h  fontcache.cpp  fontcache.h  spritesheet.cpp  spritesheet.h  tilemap.cpp  ttffont.cpp  ttffont.h
Framework/Forms/: checkbox.cpp  checkbox.h  control.cpp  control.h  form.cpp  form.h  graphic.cpp  graphicbutton.cpp  graphicbutton.h  hscrollbar.cpp  hscrollbar.h  label.cpp  label.h  list.cpp  list.h  textbutton.cpp  textbutton.h  textedit.cpp  textedit.h  vscrollbar.cpp  vscrollbar.h
Framework/Network/: download.cpp  download.h  network.cpp  network.h
Framework/Primitives/: angle.cpp  angle.h  box.cpp  box.h  line.cpp  strings.h  vector2.h  vector2i.cpp  vector2i.h
Framework/Sound/: audio.cpp  audio.h  sfxcache.cpp  sfxcache.h
Framework/Stages/: stage.h
Framework/Transitions/: fadeacross.cpp  fadeacross.h  fadein.cpp  fadein.h  fadeout.cpp  fadeout.h  strips.cpp  strips.h  tiled.cpp  tiled.h
Game/: arena.cpp  arena.h  boot.cpp  boot.h  charselect.cpp  charselect.h  fight.cpp  fight.h  fighter.cpp  fighter.h  fighter_akuma.cpp  fighter_akuma.h  includes.h  matchover.cpp  matchover.h  menu.cpp  menu.h  networkmenu.cpp  networkmenu.h  networkpacket.h  playerselect.cpp  playerselect.h  qix.cpp  qix.h  roundcountin.cpp  roundcountin.h  roundover.cpp  roundover.h  settingskeyset.cpp  settingskeyset.h  settingsmenu.cpp  settingsmenu.h
resources/: akuma.txt  bison.txt  data.txt  gnu.txt  kit.txt  ryu.txt  wilber.txt
resources.pnd/: PXML.xml
resources/new/: gnu.txt  kit.txt
